# loongclaw

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOP.md  Dockerfile  LICENSE  README.md  README_CN.md  TEST.md  build.rs  build.sh  docker-compose.yaml  go.mod  install.ps1  install.sh  loongclaw.config.example.yaml  uninstall.ps1  uninstall.sh
crates/loongclaw-app/: Cargo.toml
crates/loongclaw-channels/: Cargo.toml
crates/loongclaw-clawhub/: Cargo.toml
crates/loongclaw-core/: Cargo.toml
crates/loongclaw-storage/: Cargo.toml
crates/loongclaw-storage/src/: db.rs  lib.rs  memory.rs
crates/loongclaw-tools/: Cargo.toml
docs/: mcp-sdk-evaluation.md
docs/clawhub/: overview.md
docs/hooks/: HOOK.md
docs/observability/: metrics.md
docs/operations/: hapi-bridge.md  runbook.md  stability-plan-2026-q1.md
docs/plugins/: overview.md
docs/releases/: upgrade-guide.md
docs/rfcs/: 0001-authn-authz-model.md  0002-hooks-event-model.md  0003-session-fork-model.md  0004-metrics-naming.md  README.md
docs/security/: execution-model.md
scripts/: matrix-smoke-test.sh  release_finalize.sh  release_homebrew.sh
services/: build.sh  go.mod  libservico.h  main.go  main.go.test  使用 Go 编写一个静态库供 Rust 调用.md
src/: agent_engine.rs  chat_commands.rs  codex_auth.rs  config.rs  doctor.rs  gateway.rs  hooks.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory_backend.rs  otlp.rs  plugins.rs  runtime.rs  scheduler.rs  setup.rs  skills.rs  web.rs
tests/: config_validation.rs  db_integration.rs  tool_permissions.rs
web/: index.html  package-lock.json  package.json
(+68 files in other folders)
