[package]
name = "loongclaw-storage"
version = "0.0.80"
edition = "2021"
license = "MIT"

[features]
default = []
sqlite-vec = ["dep:sqlite-vec"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
loongclaw-core = { path = "../loongclaw-core" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
sqlite-vec = { version = "0.1.7-alpha.10", optional = true }
